@@ -15,6 +15,10 @@
     <description>Lightweight Jira alternative</description>
     <properties>
         <java.version>17</java.version>
+        <sonar.host.url>http://localhost:9000</sonar.host.url>
+        <sonar.projectKey>Go-Do-IT</sonar.projectKey>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.coverage.exclusions>**/JiraLiteApplication.java,**/config/SecurityConfig.java,**/model/**</sonar.coverage.exclusions>
     </properties>
     <dependencies>
         <dependency>
@@ -58,6 +62,11 @@
         <scope>runtime</scope>
         <optional>true</optional>
     </dependency>
+    <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-test</artifactId>
+        <scope>test</scope>
+    </dependency>
     </dependencies>
 
     <build>
@@ -68,6 +77,45 @@
                 <configuration>
                 </configuration>
             </plugin>
+            <plugin>
+            <groupId>org.sonarsource.scanner.maven</groupId>
+            <artifactId>sonar-maven-plugin</artifactId>
+            <version>5.5.0.6356</version> 
+        </plugin>
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.14</version>
+            <configuration>
+                <excludes>
+                    <exclude>**/JiraLiteApplication.class</exclude>
+                    <exclude>**/config/SecurityConfig.class</exclude>
+                    <exclude>**/model/**</exclude>
+                </excludes>
+            </configuration>
+            <executions>
+                <execution>
+                    <id>prepare-agent</id>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>report</id>
+                    <phase>test</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+                <argLine>-Dnet.bytebuddy.experimental=true ${argLine}</argLine>
+            </configuration>
+        </plugin>
         </plugins>
     </build>
 
